password generating script

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="container">
         <h1>Password Generator</h1>
         <div class="result-container">
-            <span id="result"></span>
+            <span id="password"></span>
             <button class="button copy-button">
-                <i class="fa fa-clipboard"></i>
+                <img src="https://img.icons8.com/ios-glyphs/30/ffffff/clipboard.png"/>
             </button>
         </div>
         <div class="option">
@@ -32,7 +32,10 @@
             <label for="symbols">Include symbols:</label>
             <input type="checkbox" id="symbols" name="symbols">
         </div>
-        <button class="button">Generate</button>
+        <button class="button" id="password-button">Generate</button>
     </div>
+
+
+    <script src="main.js"></script>
 </body>
 </html>
